// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPreview /> renders correctly closed 1`] = `
<SideModal
  close={[MockFunction]}
  opened={false}
>
  <WrappedIdeaContent
    closeSideModal={[MockFunction]}
    handleClickEdit={[MockFunction]}
    ideaId={null}
  />
</SideModal>
`;

exports[`<IdeaPreview /> renders the idea content initially 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <WrappedIdeaContent
    closeSideModal={[MockFunction]}
    handleClickEdit={[MockFunction]}
    ideaId="GreatIdea"
  />
</SideModal>
`;

exports[`<IdeaPreview /> renders the idea edit correctly 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <WrappedIdeaEdit
    goBack={[MockFunction]}
    ideaId="GreatIdea"
  />
</SideModal>
`;
